WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268423
[ SonomaB wk2 Debug arm64 ] http/tests/inspector/dom/didFireEvent.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=268423
Summary
[ SonomaB wk2 Debug arm64 ] http/tests/inspector/dom/didFireEvent.html is a f...
Marta Darbinyan
Reported
2024-01-30 16:33:46 PST
Description: http/tests/inspector/dom/didFireEvent.html Is a flaky crash on macOS Sonoma ToT. The crash occurred within this range
273408@main...273382@main
. This issue can be bisected to <commit> using the command: run-webkit-tests --root --exit-after-n-failures 1 --debug <test> History:
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Finspector%2Fdom%2FdidFireEvent.html&version_name=Sonoma&style=debug&flavor=wk2
Diff/Image Diff/Crash Log: inspector-resource:///TestCombined.js:35653:23: CONSOLE ASSERT ERROR event (page-4140): {"method":"Console.messageAdded","params":{"message":{"source":"network","level":"error","text":"Failed to load resource: the server responded with a status of 404 (Not Found)","type":"log","line":0,"column":0,"url":"
http://127.0.0.1:8000/inspector/dom/resources/white.mp4
","repeatCount":1,"networkRequestId":"0.117","timestamp":1706431826.418988}}} Link:
https://build.webkit.org/results/Apple-Sonoma-Debug-AppleSilicon-WK2-Tests/273617@main%20(1406)/http/tests/inspector/dom/didFireEvent-crash-log.txt
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-30 16:34:06 PST
<
rdar://problem/121970654
>
Ryan Haddad
Comment 2
2024-01-30 16:35:46 PST
ASSERTION FAILED: willBeComposited == needsToBeComposited(layer, queryData) /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Source/WebCore/rendering/RenderLayerCompositor.cpp(1251) : void WebCore::RenderLayerCompositor::computeCompositingRequirements(RenderLayer *, RenderLayer &, LayerOverlapMap &, CompositingState &, BackingSharingState &, bool &)
EWS
Comment 3
2024-01-30 17:25:53 PST
Test gardening commit
273799@main
(432ca5b5ec18): <
https://commits.webkit.org/273799@main
> Reviewed commits have been landed. Closing PR #23553 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 4
2024-01-31 05:02:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23571
EWS
Comment 5
2024-01-31 16:13:48 PST
Committed
273867@main
(05e445aaf98a): <
https://commits.webkit.org/273867@main
> Reviewed commits have been landed. Closing PR #23571 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug