[ SonomaB wk2 Debug arm64 ] http/tests/inspector/dom/didFireEvent.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=268423 rdar://121970654

Reviewed by Youenn Fablet.

If the RenderLayerCompositor had queried the element's MediaPlayer::supportsAcceleratedRendering prior the player having been created it would have been set to false.
Follow-up render after the MediaPlayerPrivate had been created would trigger an assertion.

Prior 273406@main, the MediaPlayerPrivateRemote would call mediaPlayerRenderingModeChanged in its constructor hiding the issue.
Generalise the fix to all MediaPlayerPrivate.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/html/HTMLMediaElement.h:
* Source/WebCore/html/HTMLVideoElement.cpp:
(WebCore::HTMLVideoElement::mediaPlayerEngineUpdated):

Canonical link: https://commits.webkit.org/273867@main